20210205 1.1.1 Fixed printf in webenrollmentnewrequest
20210205 1.1.0 Added Versioning

Before 2021
Untracked in changelog. See git history